# Rotex

./: Cargo.toml  README.md
src/: act_fn.rs  elem.rs  lib.rs  main.rs  net.rs
src/layers/: linear.rs  mod.rs  sigmoid.rs
src/utils/: active_fun.rs  helper.rs  mod.rs
tests/: lib.rs  test_elem.rs  test_layer.rs  test_utils.rs
